--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- end Css -->
 
-    <title>My Portofolio | Rizki Ramadhantio</title>
+    <title>My Portofolio ^^ | Rizki Ramadhantio</title>
   </head>
   <body id="home">
     <!-- Navbar -->
