--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="style.css" />
     <!-- end Css -->
 
-    <title>My Portofolio ^^ | Rizki Ramadhantio</title>
+    <title>My Portfolio | Rizki Ramadhantio</title>
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Rizki Ramadhantio</a>
+        <a class="navbar-brand" href="https://www.linkedin.com/in/rizki-ramadhantio-6b5939223/">Rizki Ramadhantio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#project">Project</a>
+              <a class="nav-link" href="#project">Training</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#kontak">Contact</a>
@@ -49,6 +49,7 @@
     <section class="jumbotron text-center">
       <img src="img/m1.png" alt="Rizki" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Rizki Ramadhantio</h1>
+      <p>Bachelor of Information Systems at University of Amikom Purwokerto</p>
       <p class="lead"><i class="bi bi-geo-alt-fill"> Kebumen, Jawa Tengah, 54361</i> | <i class="bi bi-telephone-fill">+62 878 4018 0222</i> | <i class="bi bi-envelope-fill"> ramadhan.rtio@gmail.com</i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -75,10 +76,7 @@
             </p>
           </div>
           <div class="col-4-md">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique perferendis eum repellendus beatae modi nam praesentium. Suscipit sapiente sunt dicta soluta quasi delectus quis iure, asperiores molestiae deserunt vel
-              temporibus.
-            </p>
+            <p>I have basic knowledge in several programming languanges such as PHP, HTML & CSS and Python.Quite good at Microsoft Office.</p>
           </div>
         </div>
       </div>
@@ -103,25 +101,25 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="imgg/1.jpg" class="card-img-top" alt="p1" />
+              <img src="img/Cap.PNG" class="card-img-top" alt="p1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">FGA Big Data Using Python.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="imgg/1.jpg" class="card-img-top" alt="p1" />
+              <img src="img/Cap2.PNG" class="card-img-top" alt="p1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">PCAP Python</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="imgg/1.jpg" class="card-img-top" alt="p1" />
+              <img src="img/en.jpg" class="card-img-top" alt="p1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">english course.</p>
               </div>
             </div>
           </div>
@@ -198,7 +196,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center pb-4">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/rizkiiirr/" class="text-white fw-bold">Rizki Ramadhantio</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.linkedin.com/in/rizki-ramadhantio-6b5939223/" class="text-white fw-bold">Rizki Ramadhantio</a></p>
     </footer>
     <!-- end Footer -->
 
