--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section class="jumbotron text-center">
       <img src="img/m1.png" alt="Rizki" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Rizki Ramadhantio</h1>
-      <p>Bachelor of Information Systems at University of Amikom Purwokerto</p>
-      <p class="lead"><i class="bi bi-geo-alt-fill"> Kebumen, Jawa Tengah, 54361</i> | <i class="bi bi-telephone-fill">+62 878 4018 0222</i> | <i class="bi bi-envelope-fill"> ramadhan.rtio@gmail.com</i></p>
+      <p class="lead">Bachelor of Information Systems at University of Amikom Purwokerto</p>
+      <p><i class="bi bi-geo-alt-fill"> Kebumen, Jawa Tengah, 54361</i> | <i class="bi bi-telephone-fill">+62 878 4018 0222</i> | <i class="bi bi-envelope-fill"> ramadhan.rtio@gmail.com</i></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffff"
